@@ -1,3 +1,10 @@
+2007-06-10  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* source/org/jfree/chart/plot/CategoryPlot.java
+	(getRangeAxisIndex): New method.
+
+----------  JFREECHART 1.0.6 RELEASED ------------------------
+
 2007-06-15  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* swt/org/jfree/experimental/swt/SWTGraphics2D.java
